--- a/index.html
+++ b/index.html
@@ -5,33 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="index.css">
   
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <div class="summary-container">
+      <div class="header">
+        <img src="./images/illustration-hero.svg" alt="Cartoon illustration of woman listening to music on a mobile device">
+      </div>
+      <h1>Order Summary</h1>
+      <p>
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
+      <div class="plan-container">
+        <div class="plan-icon">
+          <img src="./images/icon-music.svg" alt="Icon of two beamed eighth notes">
+        </div>
+        <div class="plan-description">
+          <strong>Annual Plan</strong>
+          <br>
+          $59.99/year
+        </div>
+        <div class="plan-change">
+          <a href="#">Change</a>
+        </div>
+      </div>
+      <button class="proceed">Proceed to Payment</button>
+      <p>
+        <a href="#">Cancel Order</a>
+      </p>
+    </div>
+    
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/adriennecaparaz/order-summary-component">Adrienne Caparaz</a>.
+    </div>
+  </main>
 </body>
 </html>
