--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       </p>
     </div>
     
-    <div class="attribution">
+    <footer>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/adriennecaparaz/order-summary-component">Adrienne Caparaz</a>.
-    </div>
+    </footer>
   </main>
 </body>
 </html>
