added styling for header image and description

--- a/index.html
+++ b/index.html
@@ -12,31 +12,33 @@
 <body>
   <main>
     <div class="summary-container">
-      <div class="header">
+      <div class="summary-header">
         <img src="./images/illustration-hero.svg" alt="Cartoon illustration of woman listening to music on a mobile device">
       </div>
-      <h1>Order Summary</h1>
-      <p>
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
-      <div class="plan-container">
-        <div class="plan-icon">
-          <img src="./images/icon-music.svg" alt="Icon of two beamed eighth notes">
+      <div class="summary-content">
+        <h1>Order Summary</h1>
+        <p>
+          You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!
+        </p>
+        <div class="plan-container">
+          <div class="plan-icon">
+            <img src="./images/icon-music.svg" alt="Icon of two beamed eighth notes">
+          </div>
+          <div class="plan-description">
+            <strong>Annual Plan</strong>
+            <br>
+            $59.99/year
+          </div>
+          <div class="plan-change">
+            <a href="#">Change</a>
+          </div>
         </div>
-        <div class="plan-description">
-          <strong>Annual Plan</strong>
-          <br>
-          $59.99/year
-        </div>
-        <div class="plan-change">
-          <a href="#">Change</a>
-        </div>
+        <button class="proceed">Proceed to Payment</button>
+        <p>
+          <a href="#">Cancel Order</a>
+        </p>
       </div>
-      <button class="proceed">Proceed to Payment</button>
-      <p>
-        <a href="#">Cancel Order</a>
-      </p>
     </div>
     
     <footer>
