--- a/index.html
+++ b/index.html
@@ -16,28 +16,29 @@
         <img src="./images/illustration-hero.svg" alt="Cartoon illustration of woman listening to music on a mobile device">
       </div>
       <div class="summary-content">
-        <h1>Order Summary</h1>
-        <p>
-          You can now listen to millions of songs, audiobooks, and podcasts on any
-          device anywhere you like!
-        </p>
+        <div class="summary-text">
+          <h1>Order Summary</h1>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on any
+            device anywhere you like!
+          </p>
+        </div>
         <div class="plan-container">
           <div class="plan-icon">
             <img src="./images/icon-music.svg" alt="Icon of two beamed eighth notes">
           </div>
           <div class="plan-description">
-            <strong>Annual Plan</strong>
-            <br>
-            $59.99/year
+            <div><strong>Annual Plan</strong></div>
+            <div>$59.99/year</div>
           </div>
           <div class="plan-change">
             <a href="#">Change</a>
           </div>
         </div>
         <button class="proceed">Proceed to Payment</button>
-        <p>
+        <div class="cancel">
           <a href="#">Cancel Order</a>
-        </p>
+        </div>
       </div>
     </div>
     
