added cancel order styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <button class="proceed">Proceed to Payment</button>
         <div class="cancel">
-          <a href="#">Cancel Order</a>
+          <p><a href="#">Cancel Order</a></p>
         </div>
       </div>
     </div>
